<resources>
    <string name="app_name">SWD BPHC</string>
    <string name="title_goodies">Goodies</string>
    <string name="title_mess">Mess menu</string>
    <string name="title_home">Home</string>
    <string name="title_connect">Connect</string>
    <string name="timetable_division">T.D.</string>
    <string name="erp">ERP</string>
    <string name="library_opac">Library OPAC</string>
    <string name="title_swd">Student Welfare Division</string>
    <string name="title_bphc">BITS Pilani, Hyderabad Campus</string>
    <string name="contact_us">Contact us via email</string>
    <string name="swd_email_id">swdnucleus@hyderabad.bits-pilani.ac.in</string>
    <string name="send_email">Send email with:</string>
    <string name="bits_email_ending">\@hyderabad.bits-pilani.ac.in</string>
    <string name="sign_out_title">Sign out</string>
    <string name="sign_out_message">Are you sure you want to sign out?</string>
    <string name="sign_out_positive">Yes</string>
    <string name="sign_out_neutral">Cancel</string>
    <string name="retry">Retry</string>
    <string name="error_goodie_amount_min_max_range">Amount must be in between range specified</string>
    <string name="error_goodie_invalid_amount">Invalid amount</string>
    <string name="error_goodie_size_not_selected">Select the size and quantity of the goodie you want</string>
    <string name="error_fields_empty">Field(s) can\'t be empty</string>
    <string name="error_cms_not_installed">CMS app not installed</string>
    <string name="error_outstation_date_range_not_selected">Date range not selected</string>
    <string name="error_outstation_location_empty">Location not entered</string>
    <string name="error_outstation_reason_empty">Reason not entered</string>
    <string name="registered_mess">You\'re registered to mess %1$s</string>
    <string name="field_room_no">Room number</string>
    <string name="field_phone_no">Phone number</string>
    <string name="field_DOB">Date of birth</string>
    <string name="field_gender">Gender</string>
    <string name="field_nationality">Nationality</string>
    <string name="field_blood_group">Blood type</string>
    <string name="field_city">City/Town</string>
    <string name="field_state">State</string>
    <string name="field_bank_name">Bank name</string>
    <string name="field_ifsc">IFSC code</string>
    <string name="field_fname">Father\'s name</string>
    <string name="field_femail">Father\'s email</string>
    <string name="field_foccupation">Father\'s occupation</string>
    <string name="field_mname">Mother\'s name</string>
    <string name="field_memail">Mother\'s email</string>
    <string name="field_moccupation">Mother\'s occupation</string>
    <string name="field_aadhar">Aadhar number</string>
    <string name="field_pan">PAN card number</string>
    <string name="field_category">Category</string>
    <string name="field_fcomp">Father\'s company</string>
    <string name="field_fdesg">Father\'s designation</string>
    <string name="field_mcomp">Mother\'s company</string>
    <string name="field_mdesg">Mother\'s designation</string>
    <string name="field_med_history">Medical history</string>
    <string name="field_current_med">Current medications</string>
    <string name="parents_details">Parents\' details</string>
    <string name="medical_details">Medical details</string>
    <string name="bank_account_details">Bank account details</string>
    <string name="personal_details">Personal details</string>
    <string name="confirm_profile_correctness_title">Update profile?</string>
    <string name="confirm_profile_correctness_body">I understand that the information I provided will be used by SWD, ARCD, and other administrative divisions for their internal use/communication. I agree that all the information provided above is correct to the best of my knowledge. Any inconvenience or problem arising due to any discrepancy in the provided data shall solely be my responsibility.</string>
    <string name="confirm_profile_correctness_positive">Yes, continue</string>
    <string name="confirm_profile_correctness_neutral">Cancel</string>
    <string name="confirm_mcn_title">Apply for MCN</string>
    <string name="confirm_mcn_body">Are you sure you want to submit your application for the MCN scholarship?</string>
    <string name="confirm_outstation_title">Confirm outstation</string>
    <string name="confirm_outstation_body">Outstation mess graces will be applied automatically when approved. An outstation can\'t be canceled once approved.</string>
    <string name="confirm_positive">Yes, continue</string>
    <string name="confirm_neutral">Cancel</string>
    <string name="deductions">Deductions</string>
    <string name="spent_this_semester">spent this semester</string>
    <string name="menu">Mess menu</string>
    <string name="mess_breakfast">Breakfast (7:30 AM to 9:30 AM)</string>
    <string name="mess_lunch">Lunch (12:00 PM to 2:00 PM)</string>
    <string name="mess_snacks">Snacks (5:00 PM to 6:00 PM)</string>
    <string name="mess_dinner">Dinner (7:00 PM to 9:00 PM)</string>
    <string name="quantity">Quantity</string>
    <string name="order">Place order</string>
    <string name="delete_booking_title">Delete booking</string>
    <string name="delete_booking_message">Are you sure you want to delete your booking?</string>
    <string name="delete_booking_positive">Yes</string>
    <string name="delete_booking_neutral">Cancel</string>
    <string name="amount">Amount</string>
    <string name="earned_so_far">earned so far</string>
    <string name="sold_so_far">sold so far</string>
    <string name="mess_grace">Mess grace</string>
    <string name="mess_graces">Mess graces</string>
    <string name="applied_on_date_time">Applied on %1$s at %2$s</string>
    <string name="mess_grace_for">Grace for %1$s</string>
    <string name="apply_grace">Apply for grace</string>
    <string name="no_graces_empty_text">You haven\'t applied for any mess graces</string>
    <string name="personal_email_id">Personal email ID</string>
    <string name="field_home_phone_number">Home phone number</string>
    <string name="home_address">Home address</string>
    <string name="guardian_name">Guardian name</string>
    <string name="field_guardian_phone_number">Guardian phone number</string>
    <string name="household_income">Household income</string>
    <string name="address_details">Address details</string>
    <string name="guardian_s_details">Guardian\'s details</string>
    <string name="bank_account_number">Bank account number</string>
    <string name="father_phone_number">Father\'s phone number</string>
    <string name="size_xs">XS</string>
    <string name="size_s">S</string>
    <string name="m">M</string>
    <string name="size_l">L</string>
    <string name="xl">XL</string>
    <string name="size_xxl">XXL</string>
    <string name="size_xxxl">XXXL</string>
    <string name="select_sizes">Select sizes</string>
    <string name="no_deductions">You haven\'t placed any orders</string>
    <string name="deductions_quantity">Quantity: %1$s</string>
    <string name="deductions_price">₹%1$s</string>
    <string name="deductions_sizes">(%1$s)</string>
    <string name="transaction_id">Order ID: %1$s</string>
    <string name="deduction_details">Details of your order.</string>
    <string name="transaction_date">Order placed: %1$s at %2$s</string>
    <string name="goodie_price">Goodie price</string>
    <string name="total_amount">Total amount</string>
    <string name="cancel_order">Cancel order</string>
    <string name="cancel_message">Are you sure you want to cancel your order?</string>
    <string name="cancel_outstation">Cancel outstation</string>
    <string name="cancel_outstation_message">Are you sure you want to cancel this outstation?</string>
    <string name="cancel_mcn_message">Are you sure you want to delete your MCN application?</string>
    <string name="cancel_positive">Yes</string>
    <string name="cancel_neutral">No</string>
    <string name="book_slot_title">Book counsellor</string>
    <string name="book_slot_message">Are you sure you want to book a counsellor for %1$s?</string>
    <string name="book_slot_positive">Yes</string>
    <string name="book_slot_neutral">Cancel</string>
    <string name="connect_no_members">No contacts found</string>
    <string name="cms_app">CMS app</string>
    <string name="mess_registration">Mess registration</string>
    <string name="mess_registration_prompt">Select which mess you want to register to</string>
    <string name="mess_1">Mess 1</string>
    <string name="mess_2">Mess 2</string>
    <string name="register">Register</string>
    <string name="mess_registration_closed">Mess registration is currently closed</string>
    <string name="documents">Documents</string>
    <string name="contact_officials">Contact officials</string>
    <string name="contact_student_representatives">Contact student representatives</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="bonafide_certificate">Bonafide certificate</string>
    <string name="call_prompt_title">Urgent reasons only</string>
    <string name="call_prompt_message">Continue calling %1$s only if it\'s urgent. If it\'s not urgent, use WhatsApp or email instead.</string>
    <string name="call_prompt_neutral">Cancel</string>
    <string name="call_prompt_positive">Yes, it\'s urgent</string>
    <string name="no_documents_available">No documents available</string>
    <string name="outstation">Outstations</string>
    <string name="outstation_location">Location</string>
    <string name="outstation_reason">Reason</string>
    <string name="no_outstation_requests">No outstation requests</string>
    <string name="request_for_outstation">Request for an outstation</string>
    <string name="location">Location</string>
    <string name="request">Request</string>
    <string name="outstation_denied">Denied</string>
    <string name="outstation_waiting">Waiting for approval</string>
    <string name="outstation_accepted">Accepted</string>
    <string name="no_goodies_prompt">No goodies available for sale</string>
    <string name="amount_payable">Amount payable</string>
    <string name="order_limit">Limit: %1$s</string>
    <string name="outstation_grace">Outstation</string>
    <string name="apply_for_mcn">Apply for MCN</string>
    <string name="father_salary">Father\'s annual income</string>
    <string name="mother_salary">Mother\'s annual income</string>
    <string name="apply">Apply</string>
    <string name="mcn_scholarship">MCN scholarship</string>
    <string name="mcn_upload_zip">Upload ZIP</string>
    <string name="mcn_file_size_warning">*Must not exceed 10 MB</string>
    <string name="faqs">FAQs</string>
    <string name="mcn_submitted_documents">Documents you\'ve submitted:</string>
    <string name="mcn_doc_father_itr">Father\'s ITR-V</string>
    <string name="mcn_doc_mother_itr">Mother\'s ITR-V</string>
    <string name="mcn_doc_father_bank">Father\'s bank statement</string>
    <string name="mcn_doc_mother_bank">Mother\'s bank statement</string>
    <string name="mcn_doc_father_comp">Father\'s computation of income</string>
    <string name="mcn_doc_mother_comp">Mother\'s computation of income</string>
    <string name="mcn_doc_guardian_itr">Guardian\'s ITR-V</string>
    <string name="mcn_doc_guardian_bank">Guardian\'s bank statement</string>
    <string name="mcn_doc_pension">Pension certificate</string>
    <string name="mcn_doc_form_16">Form 16</string>
    <string name="mcn_doc_tehsildar">Tehsildar\'s income certificate</string>
    <string name="mcn_doc_others">Others</string>
    <string name="other_documents">Other documents</string>
    <string name="cgpa">CGPA</string>
    <string name="loan_taken">Taken a loan</string>
    <string name="kya">Know Your Academics</string>
    <string name="notices">Notices</string>
</resources>